--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,26 +1,26 @@
-#Ê¹ÓÃ¿ª·¢»·¾³µÄÅäÖÃ
+#ä½¿ç”¨å¼€å‘ç¯å¢ƒçš„é…ç½®
 spring.profiles.active=dev
 
-#jasypt¼ÓÃÜµÄÑÎÖµ
-jasypt.encryptor.password=erp
+#jasyptåŠ å¯†çš„ç›å€¼
+jasypt.encryptor.password=xxxxx
 
-#RedisÅäÖÃ
+#Redisé…ç½®
 spring.redis.database=0
 spring.redis.host=localhost
 spring.redis.port=6379
 
-#°¢ÀïÔÆ¶ÌĞÅ·şÎñÅäÖÃ
+#é˜¿é‡Œäº‘çŸ­ä¿¡æœåŠ¡é…ç½®
 aliyun.sms.access.id=ENC(gXud6XWc1c7rcuMUDIUSp6+y8pFHJY/OPGw1wpPZlW2OruvlXJ\
   K6frRvWDMoSVTvbz9pUgPfy3IEWByNEk7r/w==)
 aliyun.sms.access.secret=ENC(fQbxfLyJ06OPa5xV3cEp0Yw9qrQAFFgLeItw1xWkTJ44uf\
   pRaHsX8GE1az5Dmx8GM70El9chjqn9ia4eoNxBcQ==)
 
-#PageHelperÅäÖÃ
+#PageHelperé…ç½®
 pagehelper.helper-dialect=mysql
 pagehelper.reasonable=false
 pagehelper.row-bounds-with-count=true
 pagehelper.offset-as-page-num=true
 
-#EhCacheÅäÖÃ
+#EhCacheé…ç½®
 spring.cache.type=ehcache
 spring.cache.ehcache.config=classpath:/cache/ehcache.xml
